# PythonFullStackAndTest

./: .coveragerc  .env  .env.example  .gitignore  Dockerfile  README.md  __init__.py  docker-compose.yml  pyproject.toml  pytest.ini  run_tests.bat  run_tests.sh
.github/workflows/: ci_cd.yml
GitLab/: docker-compose.yml
alembic/: env.py
alembic/versions/: 001_create_items_table.py
backend/app/: crud.py  db.py  main.py  models.py  schemas.py
backend/app/routers/: __init__.py  ai.py  items.py
docs/: architecture.md  developer_guide.md  user_guide.md
frontend/: __init__.py  streamlit_app.py
frontend/components/: __init__.py  chat_input.py  chat_message.py  model_selector.py
frontend/pages/: __init__.py  ai_chat.py  dashboard.py  data_mgmt.py
frontend/utils/: __init__.py  api.py  session.py  styles.py
tests/: .env.example  .env.test  Dockerfile.test  README.md  conftest.py  docker-compose.yml  report.html  requirements-test.txt  run_tests.ps1  run_tests.sh  ui-report.html
tests/api/: test_ai.py  test_items.py
tests/ui/: conftest.py  test_ai_assistant.py  test_dashboard.py
tests/ui/pages/: ai_assistant_page.py  base_page.py  dashboard_page.py  data_management_page.py
