[tool.poetry]
name = "fullstack-ai-crud"
version = "0.1.0"
description = "A full-stack application with CRUD operations and AI chat capabilities"
authors = ["Jack"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.20"
alembic = "^1.12.0"
asyncpg = "^0.30.0"
streamlit = "^1.26.0"
httpx = "^0.24.1"
python-dotenv = "^1.0.0"
pydantic = {extras = ["all"], version = "^2.11.3"}
pydantic-settings = "^2.0.3"
loguru = "^0.7.0"
email-validator = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
selenium = "^4.12.0"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"    